# insights-ansible-playbook-verifier

./: .gitignore  .gitleaks.toml  .packit.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SPECIFICATION.md  insights-ansible-playbook-verifier.spec  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: python.yml  regression.yml  sanity.yml  source-code.yml
data/playbooks/: README.md  bugs.yml  document-from-hell.yml  revoked_playbooks.serialized.yml  unicode.yml
data/playbooks-unsigned/: sample.yml
python/insights_ansible_playbook_lib/: __init__.py  _keygen.py  crypto.py  serialization.py
python/insights_ansible_playbook_signer/: app.py
python/insights_ansible_playbook_verifier/: __main__.py  app.py
python/tests-integration/: test_signer.py  test_verifier.py
python/tests-unit/: test_crypto.py  test_keygen.py  test_lib.py  test_serializer.py  test_verifier.py
systemtest/: copr-setup.sh
systemtest/plans/: main.fmf
systemtest/tests/integration/: main.fmf  test.sh
