[metadata]
name = insights-ansible-playbook-verifier
version = 0.0.0
author = CSI Client Tools
author_email = csi-client-tools-bugs@redhat.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
license = MIT
license-files = file: LICENSE
description = Verifier for GPG-signed Ansible playbooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Red Hat
    Red Hat Insights
    Ansible
    gnupg

[options]
python_requires = >=3.9
install_requires = pyyaml
include_package_data = True
packages = 
    insights_ansible_playbook_lib
    insights_ansible_playbook_verifier
    insights_ansible_playbook_signer
package_dir =
    =python

[options.packages.find]
where = python

[options.entry_points]
console_scripts =
    insights-ansible-playbook-verifier = insights_ansible_playbook_verifier.app:main
    insights-ansible-playbook-signer = insights_ansible_playbook_signer.app:main

[options.extras_require]
dev =
    pytest
    ruff
    mypy
    types-PyYAML

[mypy]
mypy_path = python
packages = insights_ansible_playbook_lib, insights_ansible_playbook_verifier, insights_ansible_playbook_signer

disallow_any_unimported = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_equality = true  

pretty = true
warn_incomplete_stub = true
warn_unused_configs = true

[coverage:report]
exclude_also =
     # Don't complain about missing debug only code:
    def __repr__
    def __str__
    # Don't complain about abstract methods, they aren't fun:
    @(abc\\.)?abstractmethod
    # Ignore logging setup:
    def _configure_logging

ignore_errors = true
